// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`command: lint CSS & Sass should fix linting issues: bootstrap-grid.scss before linting 1`] = `
"@import \\"~bootstrap/scss/bootstrap-grid\\";;
"
`;

exports[`command: lint CSS & Sass should fix linting issues: src/button/Button.vue after linting 1`] = `
"@import \\"~bootstrap/scss/bootstrap-grid\\";
"
`;

exports[`command: lint CSS & Sass should fix linting issues: src/button/index.js after linting 1`] = `
".foo {
  color: blue;
}
"
`;

exports[`command: lint CSS & Sass should fix linting issues: style.css before linting 1`] = `
".foo {
  color: blue;;
}
"
`;

exports[`command: lint JavaScript should lint and fix linting issues: src/es6.js after linting 1`] = `
"const constant = 'abc';
console.log(\`The constant value: \${constant}\`);

let arr = [1, 2, 3];
arr = [...arr];

let obj = { a: '1', b: '2', c: '3' };
obj = { ...obj };

const myFunction = (arg1, arg2, ...otherArgs) => {
  console.log({
    arg1,
    arg2,
    otherArgs,
  });
};
"
`;

exports[`command: lint JavaScript should lint and fix linting issues: src/es6.js before linting 1`] = `
"const constant = 'abc';
console.log(\`The constant value: \${constant}\`);;

let arr = [1, 2, 3];
arr = [...arr];

let obj = { a: '1', b: '2', c: '3' };
obj = { ...obj };

const myFunction = (arg1, arg2, ...otherArgs) => {
  console.log({
    arg1,
    arg2,
    otherArgs,
  });
};
"
`;

exports[`command: lint JavaScript should lint and fix linting issues: src/hello-world.js after linting 1`] = `
"console.log('Hello world from!');
"
`;

exports[`command: lint JavaScript should lint and fix linting issues: src/hello-world.js before linting 1`] = `
"console.log('Hello world from!');;
"
`;

exports[`command: lint Vue should fix linting issues: src/button/Button.vue after linting 1`] = `
"<template>
  <button
    @click=\\"$emit('click')\\"
  >
    {{ text }}
  </button>
</template>

<script>
export default {
  name: \\"Button\\",
  props: {
    text: {
      type: String,
      required: true,
    }
  },
  data() {
    return {
      'i-should': 'be after \\"props\\" definition'
    }
  },

  created() {
    console.log('Hello from Button.vue!')
    console.log({ ...this.$props })

    if (this.text.includes('foobar')) {
      console.log('\\"text\\" contains \\"foobar\\"');
    }
  }
};
</script>
"
`;

exports[`command: lint Vue should fix linting issues: src/button/Button.vue before linting 1`] = `
"<template>
  <button @click=\\"$emit('click')\\"
  >
    {{ text }}
  </button>
</template>

<script>
export default {
  name: \\"Button\\",
  data() {
    return {
      'i-should': 'be after \\"props\\" definition'
    }
  },
  props: {
    text: {
      type: String,
      required: true,
    }
  },

  created() {
    console.log('Hello from Button.vue!')
    console.log({ ...this.$props })

    if (this.text.includes('foobar')) {
      console.log('\\"text\\" contains \\"foobar\\"');
    }
  }
};
</script>
"
`;

exports[`command: lint Vue should fix linting issues: src/button/index.js after linting 1`] = `
"import Vue from 'vue';
import Button from './Button';

Vue.component('y-button', Button);

console.log(\\"Hello from index.js!\\");
"
`;

exports[`command: lint Vue should fix linting issues: src/button/index.js before linting 1`] = `
"import Vue from 'vue';
import Button from './Button';

Vue.component('y-button', Button);

console.log(\\"Hello from index.js!\\");;
"
`;
